deploy/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-communication
  labels:
    istio-injection: enabled
